--- a/src/app/modules/order/orders-list/orders-list.component.html
+++ b/src/app/modules/order/orders-list/orders-list.component.html
@@ -1,7 +1,7 @@
 <div class="table_container">
   <div class="header_list">
     <h2 class="header_table">Orders</h2>
-    <a type="button" class="btn btn-primary header_button" [routerLink]="['/order/create']">New Order</a>
+    <a type="button" class="btn btn-primary header_button" (click)="newOrder()">New Order</a>
   </div>
 
   <table class="table">
