--- a/Web/Client/src/app/app.component.scss
+++ b/Web/Client/src/app/app.component.scss
@@ -42,6 +42,12 @@
   }
   color: #000000;
 }
+
+.active{
+  box-shadow: 1px 2px 4px #000000;
+  background-color: #a6f0f0ed;
+}
+
 .order {
 }
 .tab-label {
